--- a/NetFxMock.Test/NetFxMock.Test/NetFxMock.Test.csproj
+++ b/NetFxMock.Test/NetFxMock.Test/NetFxMock.Test.csproj
@@ -47,6 +47,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NetFxMock\NetFxMock.csproj">
+      <Project>{a1a544f4-da8c-410f-9974-ae69525fd529}</Project>
+      <Name>NetFxMock</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
